[backend] Second endpoint for unzipping was added + some improvements
