# backend/src/main/kotlin/org/khasbatov/homework/controller/ArchiveController.kt
@@ -1,0 +1,16 @@
+package org.khasbatov.homework.controller
+
+import org.khasbatov.homework.model.FileRequestDto
+import org.khasbatov.homework.model.FileResponseDto
+import org.khasbatov.homework.service.ArchiveService
+import org.springframework.http.ResponseEntity
+import org.springframework.web.bind.annotation.RestController
+
+@RestController
+class ArchiveController(
+    private val archiveService: ArchiveService
+) : ArchiveApi {
+
+    override fun unzipArchive(fileRequestDto: FileRequestDto): ResponseEntity<FileResponseDto> =
+        ResponseEntity.ok(archiveService.unzip(fileRequestDto.path))
+}
